// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List displays the file links 1`] = `
<ul>
  <li>
    <a
      href="http://localhost:3001/"
    >
      file-img
    </a>
  </li>
  <li>
    <a
      href="http://localhost:3001/"
    >
      file-audio
    </a>
  </li>
</ul>
`;

exports[`List displays uploads in their specific formats 1`] = `
<ul
  className="custom"
>
  <li>
    <a
      href="http://localhost:3001/"
    >
      <img
        alt="preview"
        src="http://localhost:3001/"
      />
      <div>
        file-img
      </div>
    </a>
  </li>
  <li>
    <audio
      controls={true}
      src="http://localhost:3001/"
    />
    <div>
      file-audio
    </div>
  </li>
</ul>
`;

exports[`Profile image displays first file 1`] = `
<span>
  <img
    alt="avatar"
    className="profilePic"
    src="http://localhost:3001/"
  />
</span>
`;

exports[`Profile image is set to default empty tag 1`] = `
<div
  className="profilePic"
/>
`;
